--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,11 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+    width: 0.4em;
+}
+
+::-webkit-scrollbar-track {
+    background: hsl(255, 9%, 56%);
+    border-radius: 50vh;
+    margin-block: 0.25rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #494652;
+    border-radius: 50vh;
+}
 body {
-    /* background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-    --tw-gradient-from: #1da1f2;
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, #1e293b00);
-    --tw-gradient-to: #5c87e4; */
     font-family: 'Inter Medium', sans-serif;
 }
 
@@ -15,16 +25,8 @@ body {
 }
 
 #navbar-link {
-    font-family: 'Open Sans', sans-serif;
-    /*font-family: 'Open Sans Light', sans-serif;*/
-    /*font-family: 'Open Sans Condensed', sans-serif;*/
+    font-family: 'Inter Medium', sans-serif;
 }
-
-
-#tester {
-    font-family: 'lato', sans-serif;
-}
-
 
 @layer components {
     .btn-primary-dark {
@@ -35,8 +37,3 @@ body {
         @apply bg-[#354F52] hover:bg-[#5A7477] text-gray-100 ring-2 ring-[#5A7477] ring-opacity-40 w-2/5 md:w-1/4 py-2 my-4 rounded font-semibold transition duration-500 transition-colors transition-transform active:scale-[0.95]
     }
 }
-
-/* --tw-gradient-from: #328ef8;
-  --tw-gradient-stops: var(--tw-gradient-from),
-    var(--tw-gradient-to, #1e293b00);
-  --tw-gradient-to: #5c87e4; */
